--- a/workspace_servlet/proj10_filter/.project
+++ b/workspace_servlet/proj10_filter/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>proj07_jdbc</name>
+	<name>proj10_filter</name>
 	<comment></comment>
 	<projects>
 	</projects>
